Story #285 Adidtion of conversion tables which can be altered on the fly
Former-commit-id: 73a85cba7d6fb803374308ba3d407d99ba9ac99f

--- a/iocs/isis/eurothermApp/src/Makefile
+++ b/iocs/isis/eurothermApp/src/Makefile
@@ -20,9 +20,11 @@ eurotherm_DBD += asyn.dbd
 eurotherm_DBD += drvAsynSerialPort.dbd
 eurotherm_DBD += drvAsynIPPort.dbd
 eurotherm_DBD += devIocStats.dbd
+eurotherm_DBD += cvtRecord.dbd
+eurotherm_DBD += sseqRecord.dbd
 
-eurotherm_LIBS += stream pcre
-eurotherm_LIBS += asyn devIocStats
+eurotherm_LIBS += stream pcre cvtRecord std
+eurotherm_LIBS += asyn devIocStats 
 
 # eurotherm_registerRecordDeviceDriver.cpp derives from eurotherm.dbd
 eurotherm_SRCS += eurotherm_registerRecordDeviceDriver.cpp
