Story #285 - Changes for slightly more intuitive interaction for setting sensor file (only the sensor number, type or the word none is required as appropriate for the calibration to use)
Former-commit-id: dd17863088c4cdb6eab15993813c759ac8359b88

--- a/iocs/isis/eurothermApp/src/Makefile
+++ b/iocs/isis/eurothermApp/src/Makefile
@@ -22,8 +22,9 @@ eurotherm_DBD += drvAsynIPPort.dbd
 eurotherm_DBD += devIocStats.dbd
 eurotherm_DBD += cvtRecord.dbd
 eurotherm_DBD += sseqRecord.dbd
+eurotherm_DBD += calcSupport.dbd
 
-eurotherm_LIBS += stream pcre cvtRecord std
+eurotherm_LIBS += stream pcre cvtRecord std calc
 eurotherm_LIBS += asyn devIocStats 
 
 # eurotherm_registerRecordDeviceDriver.cpp derives from eurotherm.dbd
