--- a/iocs/isis/eurothermApp/Db/Makefile
+++ b/iocs/isis/eurothermApp/Db/Makefile
@@ -11,6 +11,7 @@ include $(TOP)/configure/CONFIG
 # Create and install (or just install) into <top>/db
 # databases, templates, substitutions like this
 DB += devEurotherm.db
+DB += devSimDis.db
 
 #----------------------------------------------------
 # If <anyname>.db template is not named <anyname>*.template add
