Refs #360. Added interesting PVs to Eurotherm and configured st.cmd to use pvdump
Former-commit-id: 52a2eaf6c86a82e332bc3b0f4d75f37cb61e6001

--- a/iocs/isis/eurothermApp/src/Makefile
+++ b/iocs/isis/eurothermApp/src/Makefile
@@ -23,9 +23,10 @@ eurotherm_DBD += devIocStats.dbd
 eurotherm_DBD += cvtRecord.dbd
 eurotherm_DBD += sseqRecord.dbd
 eurotherm_DBD += calcSupport.dbd
+eurotherm_DBD += pvdump.dbd 
 
 eurotherm_LIBS += stream pcre cvtRecord csmbase std calc sscan
-eurotherm_LIBS += asyn devIocStats 
+eurotherm_LIBS += asyn devIocStats pvdump easySQLite sqlite utilities
 
 # eurotherm_registerRecordDeviceDriver.cpp derives from eurotherm.dbd
 eurotherm_SRCS += eurotherm_registerRecordDeviceDriver.cpp
