Refs #360. Change st.cmd for eurotherm
Former-commit-id: 2e598df61be3d48aadbc726c83fc626af757e3c4

--- a/iocs/isis/eurothermApp/src/Makefile
+++ b/iocs/isis/eurothermApp/src/Makefile
@@ -26,7 +26,7 @@ eurotherm_DBD += calcSupport.dbd
 eurotherm_DBD += pvdump.dbd 
 
 eurotherm_LIBS += stream pcre cvtRecord csmbase std calc sscan
-eurotherm_LIBS += asyn devIocStats pvdump easySQLite sqlite utilities
+eurotherm_LIBS += asyn devIocStats pvdump easySQLite sqlite utilities icpconfig
 
 # eurotherm_registerRecordDeviceDriver.cpp derives from eurotherm.dbd
 eurotherm_SRCS += eurotherm_registerRecordDeviceDriver.cpp
